k8s-manifests/nginx-gce/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-gce
  labels:
    name: nginx-gce
    env: dev
  annotations:
    linkerd.io/inject: enabled
