k8s-manifests/nginx-gce/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-gce
spec:
  selector:
    app: nginx-gce
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 9113
      targetPort: 9113
      protocol: TCP
      name: metrics
  type: NodePort
